service section styling

--- a/new/_index.html
+++ b/new/_index.html
@@ -26,10 +26,10 @@
           </div>
           <nav>
             <ul>
-              <li><a href="home">home</a></li>
-              <li><a href="services">services</a></li>
-              <li><a href="portfolio">portfolio</a></li>
-              <li><a href="about">about</a></li>
+              <li><a href="home">Home</a></li>
+              <li><a href="services">Serviços</a></li>
+              <li><a href="portfolio">Portfólio</a></li>
+              <li><a href="about">Sobre</a></li>
             </ul>
           </nav>
         </div>
@@ -51,53 +51,52 @@
 
     </section>
 
-    <section>
-      <h2>serviços</h2>
+    <section id="services">
+      <div class="container">
+        <div class="row">
+          <h2>serviços</h2>
+          <div class="d-flex">
+            <div class="service p-2">
+              <h3>Consultoria</h3>
+              <p>Oferecemos serviços de consultoria relacionados à desenvolvimento e gerenciamento
+                de projetos, para o planejamento e definição de tecnologias em projetos.</p>
+            </div>
+            <div class="service p-2">
+              <h3>Desenvolvimento Web</h3>
+              <p>Somos especializados no desenvolvimento de sistemas e aplicações complexas que requerem o
+                desenvolvimento de integrações
+                e a utilização de diversas ferramentas e funcionalidades.</p>
+              <!-- <p>HTML, CSS, JavaScript — we master them all. Our expertise allows us to create professional, modularized
+                code,
+                easy to
+                understand and maintain. We tailor semantic HTML markup, following the best accessibility practices. We
+                write
+                lean CSS
+                and think of interfaces in terms of reusable components. JavaScript is used in many levels: from simple
+                interactions, to
+                complex, full-featured Single Page Applications.</p> -->
+            </div>
 
-      <div class="services">
-        <div>
-          <h3>Front-end Development</h3>
-          <p>HTML, CSS, JavaScript — we master them all. Our expertise allows us to create professional, modularized
-            code,
-            easy to
-            understand and maintain. We tailor semantic HTML markup, following the best accessibility practices. We
-            write
-            lean CSS
-            and think of interfaces in terms of reusable components. JavaScript is used in many levels: from simple
-            interactions, to
-            complex, full-featured Single Page Applications.</p>
-        </div>
+            <div class="service p-2">
+              <h3>Desenvolvimento Mobile</h3>
+              <p>Também somos especialistas no desenvolvimento de aplicaçoes mobile nativas. Entenedmos que em certos
+                casos uma aplicação web responsiva não é o suficiente ou a melhor solução, por isso estamos preparados
+                para essa necessidade. </p>
+              <!-- <p>Programming is our specialty. We write world-class code, building performant and robust systems. Our
+                experience with
+                many languages, databases and tools helps us choose the most suitable technologies for your project. Our
+                code
+                is
+                constantly checked by custom-written automated tests, which assure the application works as expected and
+                raise
+                red flags
+                if a bug is introduced. On top of that, we follow the best industry practices regarding information
+                security
+                to keep
+                your data safe and sound.</p> -->
+            </div>
 
-        <div>
-          <h3>Back-end Development</h3>
-          <p>Programming is our specialty. We write world-class code, building performant and robust systems. Our
-            experience with
-            many languages, databases and tools helps us choose the most suitable technologies for your project. Our
-            code
-            is
-            constantly checked by custom-written automated tests, which assure the application works as expected and
-            raise
-            red flags
-            if a bug is introduced. On top of that, we follow the best industry practices regarding information security
-            to keep
-            your data safe and sound.</p>
-        </div>
-
-        <div>
-          <h3>Mobile Development</h3>
-          <p>Programming is our specialty. We write world-class code, building performant and robust systems. Our
-            experience
-            with
-            many languages, databases and tools helps us choose the most suitable technologies for your project. Our
-            code
-            is
-            constantly checked by custom-written automated tests, which assure the application works as expected and
-            raise
-            red
-            flags
-            if a bug is introduced. On top of that, we follow the best industry practices regarding information security
-            to keep
-            your data safe and sound.</p>
+          </div>
         </div>
       </div>
     </section>
@@ -179,7 +178,7 @@
       </div>
     </section>
 
-    <section>
+    <section id="about">
       <h2>Sobre</h2>
 
       <p>Construímos soluções tecnológicas usando uma metodologia ágil para oferecer a melhor experiência de usuário e
