feat(landing): updates on the landing page

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-  <link rel="stylesheet" href="_main.css">
+  <link rel="stylesheet" href="main.css">
   <title>Mandacaru Tech</title>
 </head>
 
@@ -41,8 +41,17 @@
     <section class="cta">
       <div class="container">
         <div class="row">
-          <h2>Produtos digitais arretados</h2>
-          <h2>do conceito à realidade.</h2>
+          <!-- <h2>Produtos digitais arretados</h2>
+          <h2>do conceito à realidade.</h2> -->
+
+
+          <div class="col">
+            <h2>Desenvolvimento Web e Mobile de Alta Qualidade</h2>
+            <p>Transforme suas ideias em realidade com a Mandacaru Tech. Como especialistas em desenvolvimento web e
+              mobile, oferecemos
+              soluções personalizadas e de alta qualidade para atender às suas necessidades.</p>
+          </div>
+          <div class="col"></div>
         </div>
       </div>
     </section>
@@ -51,6 +60,14 @@
       <div class="container">
         <div class="row">
           <h2>serviços</h2>
+          <p class="text-right pb-3 px-0">Oferecemos uma ampla gama de serviços de desenvolvimento web e mobile,
+            incluindo
+            criação de
+            sites,
+            aplicativos
+            móveis, e-commerce e soluções personalizadas. Nós trabalhamos de perto com nossos clientes para entender
+            suas
+            necessidades e oferecer soluções eficientes e de alta qualidade.</p>
           <div class="row d-flex">
             <div class="service p-2 col-1 col-sm-1">
               <h3>Consultoria</h3>
@@ -75,7 +92,71 @@
     </section>
 
     <section id="technologies">
-      <div class="container">
+      <!-- <div class="stack-bg"></div> -->
+      <div class="stack-container">
+        <h2>Tecnologias</h2>
+        <div class="tech-stack">
+          <div>
+            <h3>Especialidades</h3>
+            <ul>
+              <li class="d-flex flex-column">
+                <img src="/assets/img/tech/html-5.webp" />
+                <p>HTML</p>
+              </li>
+              <li>
+                <img src="/assets/img/tech/css3.webp" />
+                <p>CSS</p>
+              </li>
+              <li>
+                <img src="/assets/img/tech/javascript.webp" />
+                <p>Javascript</p>
+              </li>
+              <li>
+                <img src="/assets/img/tech/typescript.webp" />
+                <p>Typescript</p>
+              </li>
+              <li>
+                <img src="/assets/img/tech/angular.webp" />
+                <p>Angular</p>
+              </li>
+              <li>
+                <img src="/assets/img/tech/java.webp" />
+                <p>Java</p>
+              </li>
+              <li>
+                <img src="/assets/img/tech/spring_1.webp" />
+                <p>Spring</p>
+              </li>
+              <li>
+                <img src="/assets/img/tech/android.webp" />
+                <p>Android</p>
+              </li>
+              <li>
+                <img src="/assets/img/tech/ionic.webp" />
+                <p>Ionic</p>
+              </li>
+            </ul>
+          </div>
+          <div>
+            <h3>Experimentando</h3>
+            <ul>
+              <li>
+                <img src="/assets/img/tech/react.webp" />
+                <p>React</p>
+              </li>
+              <li>
+                <img src="/assets/img/tech/node-js.webp" />
+                <p>Node.js</p>
+              </li>
+              <li>
+                <img src="/assets/img/tech/flutter.webp" />
+                <p>Flutter</p>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <!-- <div class="container">
         <div class="row">
           <h2>Tecnologias</h2>
           <div class="tech-stack">
@@ -139,14 +220,20 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
     </section>
 
     <section id="about">
       <div class="container">
         <div class="row">
-          <h2>Sobre</h2>
-          <p>Construímos soluções tecnológicas usando uma metodologia ágil para oferecer a melhor experiência de usuário
+          <h2>Quem somos</h2>
+
+          <p>A Mandacaru Tech é uma empresa de tecnologia especializada em desenvolvimento web e mobile. Nós acreditamos
+            em
+            soluções criativas e inovadoras para ajudar nossos clientes a alcançar seus objetivos. Nossa equipe
+            altamente
+            qualificada e apaixonada trabalha incansavelmente para fornecer os melhores resultados possíveis.
+            Construímos soluções tecnológicas usando uma metodologia ágil para oferecer a melhor experiência de usuário
             e
             resultados
             comerciais. Antes de começarmos a desenvolver seu software ou aplicativo, trabalhamos em conjunto com você
