--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
             Product
             Design Sprint, para que você comece com um plano de ação claro, com um tempo e orçamento precisos.</p>
 
-          <div class="members">
+          <!-- <div class="members">
             <a href="https://www.linkedin.com/in/franciscovale/" target="_blank" rel="noopener noreferrer">
               <img
                 src="https://media.licdn.com/dms/image/D4D03AQHvigG1enOrWg/profile-displayphoto-shrink_800_800/0/1671003429936?e=1677715200&v=beta&t=NfOxvNLk1cKU5z78fD7vT5_4FHiC4GBLAu7KKyuyKIg"
@@ -256,7 +256,7 @@
               <h3>Victor Sampaio</h3>
               <p>Back-end and Mobile Developer</p>
             </a>
-          </div>
+          </div> -->
         </div>
       </div>
     </section>
